# facilitate

./: Animation_info.rtf  CMakeLists.txt  README.md  Slime_Jumping.aseprite  Tileset numbering.rtf  character.aseprite  character_Idle.aseprite  character_walking.aseprite  tileset.aseprite
.cache/clangd/index/: animation.cpp.BDC4BA74E6F49B81.idx  animation.hpp.77692FACB5C0C77F.idx  animation_system.cpp.2049FE100E0ECAE3.idx  animation_system.hpp.62564C12223083D1.idx  collider.cpp.F388D3FEF65396C2.idx  collider.hpp.C8EC206E61D77601.idx  (+30 more)
Export/: 1.lvl  1.lvl.rtf  Animation_info.rtf  Tileset LVL.rtf  Tileset numbering.rtf
Export/Chara/: Animation_info.rtf
Export/Draft/: Tileset numbering.rtf
Export/Sand/: 1.lvl  Tileset Number.txt  dungeon.lvl
Source/: Character Walking fixed.aseprite  Gargoyle.aseprite  Ideas for dungeons.txt  Sand Dungeon.aseprite  Slime.aseprite  Slime_Idle.aseprite  Slime_Jumping.aseprite  Tileset Ice.aseprite  Tileset Lava.aseprite  Tileset Sand.aseprite  Tileset Space.aseprite  Tileset Test.aseprite  character_Idle.aseprite  character_walking.aseprite
Source/Drafts/: Tileset Test.aseprite  tileset.aseprite
src/: CMakeLists.txt  animation.cpp  animation.hpp  collision.cpp  collision.h  collision.hpp  level.cpp  level.hpp  main.cpp  math.h  object.cpp  object.hpp  player.cpp  player.hpp  systems.cpp  systems.hpp  texture.cpp  texture.hpp  tilemap.cpp  tilemap.hpp  timer.cpp  timer.hpp
src/ecs/: componentmanager.hpp  componentpool.hpp  coordinator.hpp  entitymanager.hpp  system.hpp  types.hpp
src/ecs/components/: ai.hpp  collider.cpp  collider.hpp  player.hpp  renderable.hpp  transform.hpp  velocity.hpp
src/ecs/systems/: ai_system.cpp  ai_system.hpp  animation_system.cpp  animation_system.hpp  collision_system.cpp  collision_system.hpp  physics_system.cpp  physics_system.hpp  player_control_system.cpp  player_control_system.hpp  render_system.cpp  render_system.hpp
